--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h5 class="card-title text-purple p-2">Card title</h5>
                 <p class="card-text p-2">Some quick example text to build on the card title and make up the bulk of the
                     card's content.</p>
-                <a href="#" class="m-3 btn btn-purple text-light">Go somewhere</a>
+                <a href="#" class="m-3 btn btn-purple ">Go somewhere</a>
             </div>
         </div>
 </body>
